<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.home.Home_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Popular"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/fanfics"
        android:textSize="26dp"
        android:textStyle="normal" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_view" />


    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="250dp"
        android:text="@string/Authors"
        android:layout_marginLeft="19dp"
        android:textSize="55px"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_authors"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:layout_marginTop="290dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_view_vertical">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>

