<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.profile.Profile_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Profile"
        android:textSize="26dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_gravity="start"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/avatar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="240dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:text="@string/Dexer"
        android:textSize="26dp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:textColor="@color/followers_color"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/followers"
        android:textSize="24dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Ilikmygrealifeandihavegreatgirl."
        android:textSize="17dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_recycler"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="390dp"
        />


</FrameLayout>